[tool.poetry]
name = "nested_poetry_project_name"
version = "0.1.0"
description = "This is a testing package of GitHub Action reusable workflow"
authors = ["Chisanan232 <chi10211201@cycu.org.tw>"]
license = "Apache License 2.0"
packages = [{include = "nested_python_src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
pytest-rerunfailures = "^10.2"
coverage = "^6.2"
coveralls = "^3.3.1"

[tool.poetry.group.github-action]
optional = true

[tool.poetry.group.github-action.dependencies]
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
